tests/raw_ptr/assign_of_wrong_pointee_type_errors.err.expected
error: at 5:13: [TC-AssignmentTypeMismatch] In function 'f', block 'entry': Type mismatch in assignment. LHS is *i64, RHS is *i32
   |
 5 |             p = &raw x;
   |             ^^^^^^^^^^
